<resources>
    <string name="app_name" translatable="false">LoftMoney</string>
    <!--    Add item activity-->
    <string name="btnAddItemAddTitle">Add</string>
    <string name="etAddItemNameHint">Name</string>
    <string name="etAddItemPriceHint">Price</string>

    <!--    items adapter-->
    <string name="price_template" translatable="false">%1$s ₽</string>

    <!--    Main activity-->
    <string name="outcomes">Outcomes</string>
    <string name="incomes">Incomes</string>
    <string name="balance">Balance</string>

    <!--    Budget fragment-->
    <string name="selected">Selected: %1$s</string>

    <!--    menu-->
    <string name="remove">Remove</string>
    <string name="confirmation">Are you sure you want to remove the selected items?</string>

    <!--    Auth activity-->
    <string name="btAuthEnterText">enter</string>
    <string name="main_title">Budget accounting</string>

    <!--    Balance fragment-->
    <string name="available_finances">Available finances</string>
    <!--    stub balance values-->
    <string name="defaultAvailable" translatable="false">67000₽</string>
    <string name="defaultOutcomes" translatable="false">5400₽</string>
    <string name="defaultIncomes" translatable="false">74000₽</string>

    <!--    main tabs titles-->
    <string-array name="main_tabs">
        <item>@string/outcomes</item>
        <item>@string/incomes</item>
        <item>@string/balance</item>
    </string-array>

</resources>
