<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnAddItemAdd"
        android:layout_marginBottom="@dimen/add_item_margin_bottom"
        android:orientation="vertical"
        android:paddingStart="@dimen/add_item_padding_start"
        android:paddingEnd="@dimen/add_item_padding_end">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etAddItemNameHint"
            app:hintTextAppearance="@style/addItemEditTextHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddItemName"
                style="@style/addItemEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/etAddItemNameHint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etAddItemPriceHint"
            app:hintTextAppearance="@style/addItemEditTextHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddItemPrice"
                style="@style/addItemEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/etAddItemPriceHint"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnAddItemAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:drawableStart="@drawable/ic_check"
        android:enabled="false"
        android:text="@string/btnAddItemAddTitle"
        android:textColor="@color/add_button_text_color_selector" />
</RelativeLayout>